--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -1,5 +1,5 @@
 lencx:
   name: lencx
-  title: 'FE'
+  title: Web • Rust • Tauri • Electron
   url: https://github.com/lencx
   image_url: https://github.com/lencx.png
