--- a/extensions/noi-export-chatgpt/manifest.json
+++ b/extensions/noi-export-chatgpt/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 3,
   "name": "@noi/export-chatgpt",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/lencx/Noi/tree/main/extensions/noi-export-chatgpt",
   "description": "ChatGPT chat history export, supports PDF, Image, and Markdown formats.",
   "content_scripts": [
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": ["https://chatgpt.com/*"],
       "js": ["main.js"],
       "css": ["style.css"],
       "run_at": "document_end",
