--- a/extensions/noi-reset/manifest.json
+++ b/extensions/noi-reset/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "@noi/reset",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/lencx/Noi/tree/main/extensions/noi-reset",
   "description": "Reset certain website styles to enhance compatibility with Noi.",
   "content_scripts": [
@@ -9,7 +9,7 @@
       "matches": [
         "<all_urls>"
       ],
-      "js": ["scrollbar.js", "darg.js"],
+      "js": ["base.js", "scrollbar.js", "darg.js"],
       "run_at": "document_end",
       "world": "MAIN"
     }
