--- a/extensions/noi.extensions.json
+++ b/extensions/noi.extensions.json
@@ -33,6 +33,14 @@
       "url": "https://github.com/lencx/Noi/tree/main/extensions/noi-reset",
       "dirname": "noi-reset",
       "disabled": false
+    },
+    {
+      "name": "Thinking Claude",
+      "description": "Makes Claude's thinking process expandable and collapsible",
+      "version": "0.1.0",
+      "url": "https://github.com/lencx/Noi/tree/main/extensions/thinking-claude",
+      "dirname": "thinking-claude",
+      "disabled": false
     }
   ]
 }
