--- a/extensions/noi.extensions.json
+++ b/extensions/noi.extensions.json
@@ -36,7 +36,7 @@
     },
     {
       "name": "Thinking Claude",
-      "description": "Makes Claude's thinking process expandable and collapsible",
+      "description": "Let Claude think. Makes Claude's thinking process expandable and collapsible.",
       "version": "0.1.2",
       "url": "https://github.com/lencx/Noi/tree/main/extensions/thinking-claude",
       "dirname": "thinking-claude",
